--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href="https://flowbite.com/" class="flex items-center">
-                  <img src="../images/logo.jpg" class="h-8 me-3" alt="FlowBite Logo" />
+                  <img src="/images/logo.jpg" class="h-8 me-3" alt="FlowBite Logo" />
                   <span class="self-center text-2xl font-semibold whitespace-nowrap text-blue-700 dark:text-white">legacy</span>
               </a>
           </div>
