--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="/images/logo.avif" class="h-8" alt="Logo">
+            <img src="/images/logo.jpg" class="h-8" alt="Logo">
             <span class="self-center text-2xl text-blue-700 font-semibold whitespace-nowrap dark:text-white">Legacy</span>
         </a>
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -112,7 +112,7 @@
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href="https://flowbite.com/" class="flex items-center">
-                  <img src="../images/logo.avif" class="h-8 me-3" alt="FlowBite Logo" />
+                  <img src="/images/logo.jpg" class="h-8 me-3" alt="FlowBite Logo" />
                   <span class="self-center text-2xl font-semibold whitespace-nowrap text-blue-700 dark:text-white">legacy</span>
               </a>
           </div>
